Elaborated the /catalog design and handler including the schema 'kgeFileSetEntry'. Stub in of 'onload' catalog initialization for the 'Download' UI into home.html (and a new 'body' layout.html block to support this)
